--- a/donate-today/index.html
+++ b/donate-today/index.html
@@ -109,7 +109,7 @@
                 <input type="text" placeholder="Email">
             </div>
             <div class="sub-button">
-                <button>Subscribe</button>
+                <a class="button" target="_blank" href="#">Subscribe</a>
             </div>
               
            </div>
